# eventoon

./: .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  AGENTS.md  README.md  alembic.ini  docker-compose.yml  review.md  spec.md  test_cases.csv
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 14ee82cf3856_init.py  a3b4c5d6e7f8_add_unique_constraint_on_event_name.py  b1c2d3e4f5g6_add_indexes_on_registrations.py
backend/: .dockerignore  Dockerfile  pyproject.toml  seed.py  seed_edge.py  start.sh
backend/alembic/versions/: 14ee82cf3856_init.py  a2b1c3d4e5f6_add_event_ai_insights_table.py
backend/sql/: queries.sql
backend/src/eventoon/: ai.py  config.py  database.py  main.py  models.py  repositories.py  routers.py  schemas.py  services.py
backend/tests/: conftest.py  test_selenium.py
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: EventDetail.tsx  EventList.tsx  Layout.tsx  NewEvent.tsx  StatsDashboard.tsx
frontend/src/test/: EventDetail.test.tsx  EventList.test.tsx  Layout.test.tsx  NewEvent.test.tsx  StatsDashboard.test.tsx  api.test.ts
mobile/: .dockerignore  Dockerfile  app.json  eslint.config.js  nginx.conf  package-lock.json  package.json  proxy_server.py  tsconfig.json
mobile/app/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  new.tsx  stats.tsx
mobile/app/event/: [id].tsx
mobile/lib/: api.ts  types.ts
tests/: conftest.py  test_api.py  test_selenium.py
