[project]
name = "eventoon"
version = "0.1.0"
description = "Event management API"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic>=2,<3",
    "email-validator>=2,<3",
    "pydantic-settings>=2,<3",
    "openai>=1.50,<2",
    "python-dotenv>=1,<2",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "langchain-core>=0.3.0",
    "prometheus-client>=0.21,<1",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "httpx>=0.28,<1",
    "ruff>=0.9,<1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]